# madparts-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md
footprint/: BOURNS_SRN8040.py  HOLE_2mm.py  PAD_10mm.py  TI_TSSOP_14_EP.py  TI_WSON_10.py  Wurth_158301227_LED.py  test.py
src/: TI_TSSOP_14_EP.py  TI_WSON_10.py  element.rs  error.rs  gui.rs  kicad.rs  klc.rs  layers.rs  main.rs  prelude.py  settings.rs  test.py  util.rs
