[package]
name = "madparts"
version = "1.0.0"
authors = ["Joost Yervante Damad <joost@damad.be>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/rustit-be/madparts-rs"

[dependencies]
cairo-rs = "0.4.1"
chrono = "0.4.4"
clap = "2.32.0"
env_logger = "0.5.10"
glib = "0.5.0"
gdk = "0.8.0"
gdk-pixbuf = "0.4.0"
gio = "0.4.1"
inotify = "0.5.1"
lazy_static = "1.0.2"
log = "0.4.3"
pyo3 = "0.3.1"
#pyo3 = { git = "https://github.com/PyO3/pyo3.git" }
range = "0.3.1"
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.24"
tempfile = "3.0.3"

[dependencies.gtk]
version = "0.4.1"
features = ["v3_10"]
